k8s/overlays/uat/ingress-infra.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-ui
  namespace: semanix-uat
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: grafana.uat.semanix.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
  - host: prometheus.uat.semanix.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
  - host: rabbitmq.uat.semanix.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
  - host: consul.uat.semanix.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: consul
            port:
              number: 8500
  - host: vault.uat.semanix.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              number: 8200
